sass/custom/_styles.scss
// This File is imported last, and will override other styles in the cascade
// Add styles here to make changes without digging in too much

sup,
sub {
    height: 0;
    line-height: 1;
    vertical-align: baseline;
    _vertical-align: bottom;
    position: relative;
    font-size: .75em;
}
sup {
    bottom: 1ex;
}
sub {
    top: .5ex;
}

a {
    @include link-colors($link-color, $hover: $link-color-hover, $focus: $link-color-hover, $visited: $link-color-visited, $active: $link-color-active);
    text-decoration: none;
}
hr {
    margin: 0 0 20px 0;
}

#sidebar,
#main {
    margin-top: 20px;
    margin-bottom: 20px;
    border-top: 3px solid $text-color;
    color: $text-color;
    font-family: $sans;
    
    h3 {
        font-weight: 700;
        font-size: 29px;
        padding-top: 15px;
    }
}

#sidebar {
    color: $text-color-light;
    .author {
        font-weight: 600;
    }
    .navigation li {
        font-weight: 600;
        margin-bottom: 20px;
    }
    .search_form input.search {
        font-weight: 600;
        padding: 3px;
        margin: -4px 0 0 -3px;
        font-family: $sans;
        background: $main-bg;
        border: none;
        color: $link-color;
        font-size: 16px;
        width: 212px;
        &::-webkit-input-placeholder { /* WebKit browsers */
            font-weight: 600;
            color: $link-color;
        }
        &:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
            font-weight: 600;
            color: $link-color;
        }
        &::-moz-placeholder { /* Mozilla Firefox 19+ */
            font-weight: 600;
            color: $link-color;
        }
        &:-ms-input-placeholder { /* Internet Explorer 10+ */
            font-weight: 600;
            color: $link-color;
        }
    }
}

#main {
    .cover-photo {
        padding-top: 21px;
        min-height: 122px;
        background-image: url('/images/xkcd_party.jpg');
        background-repeat: no-repeat;
        background-position: 0 -5px;
        background-size: 100% auto;
        background-clip: content-box;
        position: relative;
        .credit {
            position: absolute;
            bottom: 0;
            right: 0;
            padding: 6px 4px;
            line-height: 0.7em;
            font-size: 0.7em;
            opacity: 0.7;
            background-color: $text-color;
            color: $main-bg;
            a {
                color: $main-bg;
            }
        }
    }

    #about {
        .profile-photo {
            padding-top: 6px;
            float: right;
            height: 127px;
        }
        #service-lists {
            ul {
                margin-top: -10px;
                margin-left: 25px;
            }
            img {
                height: 16px;
                padding-right: 8px;
                margin-bottom: -3px;
            }
        }
    }

    .item-list {
        .title {
            font-weight: 600;
        }
        .external .icon-external-link {
            margin-left: 1px;
            font-size: 90%;
        }
        .excerpt {
            font-style: italic;
        }
        .no-excerpt {
            min-height: 1em;
            margin: 0 0 20px 0;
        }
        .date {
            text-align: right;
            color: $text-color-light;
        }
        .date.featured {
            color: $text-color;
        }
    }

    .entry {
        .entry-content {
            font-family: $serif;
            iframe,
            object,
            p > img {
                margin: 0 auto;
                display: block;
            }
            h6 {
                font-family: $serif;
                color: $link-color;
                font-size: 16px;
            }
            h4, h6 {  // for centering images and wrapping them on the same line in a div
                text-align: center;
            }
            iframe,
            object,
            h4, h6 {
                margin-bottom: 20px;
            }
            h5 {
                font-size: 20px;
                margin-bottom: 10px;
            }
            ul {
                margin-left: 25px;
                list-style: disc;
            }
            .entry-excerpt {
                color: $text-color-light;
            }
            .entry-meta {
                margin: 0 0 20px 0;
                .entry-update {
                    margin-top: 10px;
                    p {
                        display: inline;
                    }
                }
            }
        }
        footer {
            font-family: $sans;
            .three.columns.alpha {
                text-align: left;
            }
            .six.columns {
                text-align: center;
            }
            .three.columns.omega {
                text-align: right;
            }
        }
    }
}

#footer {
    margin-top: 10px;
    .twelve.columns,
    .four.columns {
        border-top: 3px solid $text-color-light;
     }
    .twelve.columns {
        color: $text-color-light;
        a {
            color: $text-color-light;
        }
        padding: 30px 0 30px 0;
    }
}

